ApexWorkbook/src/objects/InitPiece__c.object
<CustomObject>
    <fields>
        <fullName>Label__c</fullName>
        <defaultValue>&apos;News and Information&apos;</defaultValue>
        <label>Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogoURL__c</fullName>
        <defaultValue>&apos;http://www.google.com&apos;</defaultValue>
        <label>LogoURL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <defaultValue>&apos;Placeholder&apos;</defaultValue>
        <label>Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>InitPiece</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>InitPiece Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InitPieces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>